--- a/app.json
+++ b/app.json
@@ -3,5 +3,5 @@
     "description": "Mathematics.",
     "repository": "https://github.com/TheUnblockedHubOfficial/The-Unblocked-Hub",
     "logo": "https://github.com/TheUnblockedHubOfficial/The-Unblocked-Hub/blob/main/static/assets/images/branding/favicon/in.png",
-    "keywords": ["school", "Unblocked", "ultraviolet"]
+    "keywords": ["school"]
   }
