--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "The Unblockd Hub",
   "version": "1.3.6",
-  "description": "The Unblocked Hub is the #1 site for all-in-one school entertainment. Accelerate your learning with our collection of games, apps, emulators, proxies, and so much more.",
+  "description": 
   "type": "module",
   "engines": {
     "npm": ">=7.0.0",
@@ -11,10 +11,15 @@
     "start": "node index.js"
   },
   "keywords": [
-    "proxy"
+    "man"
   ],
   "author": "",
   "license": "GPL-3.0-or-later",
+  },   
+  "dependencies": {
+  
+    "@tomphttp/bare-server-node": "^1.2.6",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
